[package]
name = "mol-cli"
version = "0.1.0"
edition = "2021"
description="A Command Line Interface for the Mollie API"
homepage="https://mollie.com"
repository="https://github.com/pgoodjohn/mol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
chrono = "0.4"
env_logger = "0.9"
requestty = "0.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
toml = "0.5"
strum = { version = "0.24", features = ["derive"] }
regex = "1"
dirs = "4.0.0"