[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://mollie.com"
repository = "https://github.com/pgoodjohn/mol"

[workspace.dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0" }