[package]
name = "mollie_api"
version = "0.0.1"
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
lazy_static = { version = "1.4" }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }