[package]
name = "mollie_api"
description = "A SDK for the Mollie API"
license = "MIT"
version = "0.0.2"
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
miette = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
lazy_static = { version = "1.4" }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }