[package]
name = "mollie_config"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
figment = {  version = "0.10", features = ["env", "toml", "test"] }
thiserror = "1"
url = {  version = "2", features = ["serde"] }
serde = { workspace = true }
dirs = "5"
miette = "5"
toml = "0.8"
